# prontuario-luna

./: .env  .replit  INSTRUCOES_GITHUB.md  LICENSE  README.md  SOLUCAO_PUSH.md  ai_processing.py  app.py  auth.py  database.py  encryption_utils.py  pdf_generator.py  pyproject.toml  replit.md  requirements_complete.txt  security_migration.py  security_setup.py  shareable_links.py  utils.py
assets/documents/: Pasted--Speaker-1-00-00-01-Eu-preciso-fazer-um-sistema-que-organize-todos-os-exames-laboratoriais-da-minha--1757749953055_1757749953055.txt
attached_assets/: Pasted-Vis-o-Geral-do-Sistema-Prontu-rio-M-dico-Digital-para-Luna-Princess-Mendes-Guimar-es-Olha-doutor--1757749901232_1757749901233.txt
components/: comparisons.py  lab_results.py  timeline.py
config/: requirements.txt
config/.streamlit/: config.toml
data/: prontuario_luna.db
docs/: GUIA_IMPLEMENTACAO_COMPLETO.md  INSTRUCOES_FINAIS.md  INSTRUCOES_UPLOAD_GITHUB.md  REPLIT_SETUP.md  analise_estrutura.md  plano_implementacao_otimizacoes.md  relatorio_funcionalidades_implementadas.md  relatorio_organizacao.md  relatorio_otimizacoes.md  todo.md
pages/: admin.py  admin_dashboard_helpers.py
tests/: test_exam_service_optimized.py  test_security_integration.py
