[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.7",
    "fpdf2>=2.8.4",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.3",
    "streamlit>=1.49.1",
]
